src/styles/global.css
:root {
    --white: hsl(0, 0%, 100%);
    --light-grayish-violet: hsl(270, 3%, 87%);
    --dark-grayish-violet: hsl(279, 6%, 55%);
    --very-dark-violet: hsl(278, 68%, 11%);
}

html {
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
}

button,
input {
    font-family: inherit;
    font-size: 100%;
    line-height: 1.15;
    margin: 0;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    font-family: "Space Grotesk", sans-serif;
    font-size: 1rem;
    background-color: var(--white);
    min-height: 100vh;
    min-width: 375px;
    margin: 0;
}

h1 {
    margin-top: 0;
}

.card {
    width: 286px;
    height: 157px;
}

.card-wrapper {
    background: url('/bg-main-mobile.png') no-repeat center var(--very-dark-violet);
    height: 240px;
    padding: 2rem 1rem;
}

.card-group {
    max-width: 343px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.card-front {
    background: url('/bg-card-front.png') no-repeat top left;
    background-size: cover;
    color: var(--white);
    position: absolute;
    top: 94px;
    left: 0;
    z-index: 10;
}

.card-logo {
    display: block;
    width: 54px;
    height: 30px;
    position: absolute;
    top: 1.125rem;
    left: 1.25rem;
}

.card-number {
    font-size: 1.125rem;
    position: absolute;
    top: 86px;
    left: 1.25rem;
    letter-spacing: 0.125em;
}

.card-number-item {
    width: 1.25rem;
    display: inline-block;
    vertical-align: top;
}

.card-number-item span {
    position: absolute;
}

.card-number-item.active {
    width: 1rem;
}

.card-name,
.card-date {
    font-size: 0.625rem;
    position: absolute;
    bottom: 1.25rem;
    left: 1.25rem;
    text-transform: uppercase;
    letter-spacing: 0.075em;
}

.card-date {
    left: auto;
    bottom: 1.25rem;
    right: 1.25rem;
}

.card-back {
    background: url('/bg-card-back.png') no-repeat top left;
    background-size: cover;
    position: absolute;
    top: 0;
    left: 57px;
}

.card-cvc {
    font-size: 0.6875rem;
    color: var(--white);
    position: absolute;
    top: 70px;
    right: 36px;
}

.form-wrapper {
    padding: 5.625rem 1.5rem 2.8125rem 1.5rem;
}

.form {
    max-width: 327px;
    margin-left: auto;
    margin-right: auto;
}

.form-group {
    margin-bottom: 1.125rem;
}

.form-label {
    font-size: 0.8125rem;
    text-transform: uppercase;
    margin-bottom: 0.5rem;
    display: inline-block;
    letter-spacing: 0.125em;
    color: var(--very-dark-violet);
}

.form-control {
    display: block;
    width: 100%;
    padding: 0.5rem 1rem;
    font-size: 1.125rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: var(--white);
    background-clip: padding-box;
    border: 1px solid var(--light-grayish-violet);
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border-radius: 0.375rem;
    transition: border-color .15s, box-shadow .15s;
}

.form-control:focus {
    outline: 0;
    border: 1px solid transparent;
    border-radius: 0.375rem;
    background:
        linear-gradient(to right, white, white),
        linear-gradient(to right, hsl(249, 99%, 64%), hsl(278, 94%, 30%));
    background-clip: padding-box, border-box;
}

.form-control::placeholder {
    color: var(--dark-grayish-violet);
    opacity: 0.4;
}

.form-date-cvc,
.form-date-group {
    display: flex;
}

.form-date-cvc .form-group {
    flex: 1 0 50%;
    max-width: 50%;
}

.form-month,
.form-year {
    width: 72px;
    height: 45px;
}

.form-month {
    margin-right: 0.5rem;
}

.btn {
    font-size: 1.125rem;
    display: inline-block;
    padding: 1rem;
    background-color: var(--very-dark-violet);
    border: 0;
    border-radius: 0.375rem;
    color: var(--white);
    text-align: center;
    width: 100%;
    margin-top: 0.625rem;
    cursor: pointer;
    transition: transform 0.3s ease 0s, box-shadow 0.3s ease 0s;
}

.btn:hover,
.btn:focus {
    box-shadow: rgb(0 0 0 / 10%) 0 0.5rem 1rem;
    transform: scale(1.015);
}

.hidden {
    display: none;
}

@media (min-width: 1200px) {
    .wrapper {
        display: flex;
        height: 900px;
        max-width: 1440px;
        margin-left: auto;
        margin-right: auto;
    }

    .card-wrapper {
        flex: 33.33%;
        max-width: 33.33%;
        min-height: 100vh;
        padding: 0;
        background: none;
    }

    .card-wrapper::before {
        content: '';
        background: url('/bg-main-mobile.png') no-repeat center var(--very-dark-violet);
        background-size: cover;
        position: absolute;
        top: 0;
        right: 66.66%;
        bottom: 0;
        left: 0;
    }

    .card-group {
        max-width: none;
    }

    .card {
        width: 447px;
        height: 245px;
    }

    .card-front {
        top: 187px;
        left: auto;
        right: -27%;
    }

    .card-logo {
        display: block;
        width: 84px;
        height: 47px;
        top: 1.75rem;
        left: 2rem;
    }

    .card-number {
        font-size: 1.75rem;
        top: 142px;
        left: 2rem;
    }

    .card-name,
    .card-date {
        font-size: 0.875rem;
        bottom: 1.75rem;
        left: 2rem;
        letter-spacing: 0.15em;
    }

    .card-date {
        left: auto;
        right: 2rem;
    }

    .card-back {
        top: 468px;
        left: auto;
        right: -47%;
    }

    .card-cvc {
        font-size: 0.875rem;
        top: 112px;
        right: 56px;
        letter-spacing: 0.15em;
    }

    .form-wrapper {
        flex: 66.66%;
        max-width: 66.66%;
        display: flex;
        align-items: center;
        padding: 0 0 0 8.5%;
    }

    .form {
        max-width: 380px;
    }

    .form-group {
        margin-bottom: 1.5rem;
    }

    .form-month,
    .form-year {
        width: 80px;
    }

    .form-month {
        margin-right: 0.625rem;
    }

    .btn {
        margin-top: 1rem;
    }
}

